change grid-gap to gap, fix and upd keywords in index, add link to gog, upd txt, md, xml

--- a/css/styles.css
+++ b/css/styles.css
@@ -140,7 +140,7 @@ ul {
 
 .grid-container {
     display: grid;
-    grid-gap: calc(var(--size-primary) * 2);
+    gap: calc(var(--size-primary) * 2);
 }
 
 .border-top {
